<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/main_activity_hobby_context_menu_add"
            android:icon="@drawable/ic_add_white_24dp"
            android:title="@string/detailed_view_add" />

        <item
            android:id="@+id/main_activity_hobby_context_menu_edit"
            android:icon="@drawable/ic_edit_white_24dp"
            android:title="@string/detailed_view_edit" />
        <item
            android:id="@+id/main_activity_hobby_context_menu_report"
            android:icon="@drawable/ic_edit_white_24dp"
            android:title="@string/detailed_view_report" />

    </group>
    <group>
        <item
            android:id="@+id/main_activity_hobby_context_menu_delete"
            android:icon="@drawable/ic_edit_white_24dp"
            android:title="@string/detailed_view_delete" />
    </group>
</menu>